[UPDATE] Update the translation for English, Chinese and French.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1264 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -831,7 +831,7 @@ BEGIN
     POPUP "&?"
     BEGIN
         MENUITEM "Help Contents",              IDM_HELP
-        MENUITEM "Command Line Arguments",      IDM_CMDLINEARGUMENTS
+        MENUITEM "Command Line Arguments...",      IDM_CMDLINEARGUMENTS
         MENUITEM SEPARATOR
         MENUITEM "Notepad++ Home",            IDM_HOMESWEETHOME
         MENUITEM "Notepad++ Project Page",    IDM_PROJECTPAGE
