[BUG_FIXED] Fix document list panel has no selection while start up.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1280 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/visual.net/notepadPlus.vcxproj
+++ b/PowerEditor/visual.net/notepadPlus.vcxproj
@@ -74,7 +74,7 @@
       <AdditionalOptions>/fixed:no %(AdditionalOptions)</AdditionalOptions>
       <AdditionalDependencies>comctl32.lib;shlwapi.lib;shell32.lib;Oleacc.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <ShowProgress>LinkVerboseLib</ShowProgress>
-      <OutputFile>$(OutDir)notepadPlus_Debug.exe</OutputFile>
+      <OutputFile>$(OutDir)notepad++.exe</OutputFile>
       <Version>1.0</Version>
       <TypeLibraryFile>/TLBID</TypeLibraryFile>
       <TypeLibraryResourceID>5</TypeLibraryResourceID>
