[RELEASE] Notepad++ 6.7.1 Release.
git-svn-id: svn://svn.tuxfamily.org/svnroot/notepadplus/repository/trunk@1313 f5eea248-9336-0410-98b8-ebc06183d4e3

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -353,6 +353,7 @@ BEGIN
         MENUITEM "&Go to...",                   IDM_SEARCH_GOTOLINE
         MENUITEM "Go to Matching Brace",        IDM_SEARCH_GOTOMATCHINGBRACE
 		MENUITEM "Select All Between Matching Braces" IDM_SEARCH_SELECTMATCHINGBRACES
+		MENUITEM "Mar&k..."                     IDM_SEARCH_MARK
         MENUITEM SEPARATOR
 
         POPUP "Mark All"
