--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -63,7 +63,7 @@ END
 // remains consistent on all systems.
 IDI_M30ICON                     ICON      "icons\\npp.ico"
 IDI_CHAMELEON                   ICON      "icons\\chameleon.ico"
-IDI_JESUISCHARLIE               ICON      "icons\\Je_suis_Charlie.ico"
+//IDI_JESUISCHARLIE               ICON      "icons\\Je_suis_Charlie.ico"
 IDI_NEW_OFF_ICON                ICON      "icons\\new_off.ico"
 IDI_OPEN_OFF_ICON               ICON      "icons\\open_off.ico"
 IDI_SAVE_OFF_ICON               ICON      "icons\\save_off.ico"
@@ -870,8 +870,8 @@ STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_BORDER | WS_SYSMENU
 FONT 8, TEXT("MS Shell Dlg"), 0, 0, 0x1
 BEGIN
     EDITTEXT        IDC_BUILD_DATETIME,150,2,150,10, ES_READONLY | NOT WS_BORDER
-    //CONTROL         "",IDI_CHAMELEON,"Static",SS_OWNERDRAW,20,5,64,64
-    CONTROL         "",IDI_JESUISCHARLIE,"Static",SS_OWNERDRAW,20,5,64,64
+    CONTROL         "",IDI_CHAMELEON,"Static",SS_OWNERDRAW,20,5,64,64
+    //CONTROL         "",IDI_JESUISCHARLIE,"Static",SS_OWNERDRAW,20,5,64,64
     LTEXT           NOTEPAD_PLUS_VERSION, IDC_STATIC,70,20,140,11
     LTEXT           "Author :",IDC_STATIC,21,45,31,8
     LTEXT           "Notepad++ team",IDC_AUTHOR_NAME,78,45,70,8
