--- a/PowerEditor/src/ScitillaComponent/columnEditor.rc
+++ b/PowerEditor/src/ScitillaComponent/columnEditor.rc
@@ -30,14 +30,14 @@
 #include "columnEditor_rc.h"
 
 
-IDD_COLUMNEDIT DIALOGEX 26, 41, 223, 206
+IDD_COLUMNEDIT DIALOGEX 26, 41, 223, 221
 STYLE DS_SETFONT | DS_FIXEDSYS | WS_POPUP | WS_CAPTION | WS_SYSMENU
 EXSTYLE WS_EX_TOOLWINDOW | WS_EX_WINDOWEDGE
 		CAPTION "Column / Multi-Selection Editor"
 FONT 8, TEXT("MS Shell Dlg"), 0, 0, 0x0
 BEGIN
     GROUPBOX        "Text to Insert",IDC_COL_TEXT_GRP_STATIC,12,10,124,54
-    GROUPBOX        "Number to Insert",IDC_COL_NUM_GRP_STATIC,12,75,204,119
+    GROUPBOX        "Number to Insert",IDC_COL_NUM_GRP_STATIC,12,75,204,139
     CONTROL         "",IDC_COL_TEXT_RADIO,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP | WS_GROUP,7,10,8,9
     CONTROL         "",IDC_COL_NUM_RADIO,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP | WS_GROUP, 7,75,8,9
     EDITTEXT        IDC_COL_TEXT_EDIT,25,32,97,14,ES_AUTOHSCROLL     
@@ -46,13 +46,17 @@ BEGIN
 	
     RTEXT           "Increase by :",IDC_COL_INCRNUM_STATIC,16,112,75,8
     EDITTEXT        IDC_COL_INCREASENUM_EDIT,95,110,38,12,ES_NUMBER
-	CONTROL         "Leading zeros", IDC_COL_LEADZERO_CHECK,"Button", BS_AUTOCHECKBOX | WS_TABSTOP,140,112,70,10
+
+	RTEXT           "Repeat :",IDC_COL_REPEATNUM_STATIC,16,133,75,8
+	EDITTEXT        IDC_COL_REPEATNUM_EDIT,95,131,38,12,ES_NUMBER
+
+	CONTROL         "Leading zeros", IDC_COL_LEADZERO_CHECK,"Button", BS_AUTOCHECKBOX | WS_TABSTOP,140,133,70,10
 	
-    CONTROL         "Dec",IDC_COL_DEC_RADIO,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,30,148,50,10
-    CONTROL         "Hex",IDC_COL_HEX_RADIO,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,124,148,50,10
-    CONTROL         "Oct",IDC_COL_OCT_RADIO,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,30,167,50,10
-    CONTROL         "Bin",IDC_COL_BIN_RADIO,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,124,167,50,10
-    GROUPBOX        "Format",IDC_COL_FORMAT_GRP_STATIC,20,132,188,54,BS_CENTER
+    CONTROL         "Dec",IDC_COL_DEC_RADIO,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,30,169,50,10
+    CONTROL         "Hex",IDC_COL_HEX_RADIO,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,124,169,50,10
+    CONTROL         "Oct",IDC_COL_OCT_RADIO,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,30,188,50,10
+    CONTROL         "Bin",IDC_COL_BIN_RADIO,"Button",BS_AUTORADIOBUTTON | WS_TABSTOP,124,188,50,10
+    GROUPBOX        "Format",IDC_COL_FORMAT_GRP_STATIC,20,153,188,54,BS_CENTER
     DEFPUSHBUTTON   "OK",IDOK,145,13,70,14,BS_NOTIFY
     PUSHBUTTON      "Cancel",IDCANCEL,145,36,70,14,BS_NOTIFY
 END
