Add more options for sorting.
User can now choose between lexicographic, integer and decimal sorting.
For decimal sorting there are two further options: decimal point ('.')
or decimal comma (',').

When doing integer/decimal sort, the parsing is not as strict as
before. E.g during integer sorting the program will interpret "123abc"
as 123.

Performance of integer sorting has been improved by 30%.

The implementation of sorting is delegated to classes which implement
the new "ISorter" interface. Unfortunately due to template issues most
of the code had to go in the header file.

--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -274,8 +274,29 @@ BEGIN
             MENUITEM "Duplicate Current Line",    IDM_EDIT_DUP_LINE
             MENUITEM "Split Lines",               IDM_EDIT_SPLIT_LINES
             MENUITEM "Join Lines",                IDM_EDIT_JOIN_LINES
-            MENUITEM "Sort Lines in Ascending Order",                IDM_EDIT_SORTLINES_ASCENDING
-            MENUITEM "Sort Lines in Descending Order",                IDM_EDIT_SORTLINES_DESCENDING
+			POPUP "Sort Lines"
+			BEGIN
+				POPUP "Lexicographic"
+				BEGIN
+					MENUITEM "Ascending", IDM_EDIT_SORTLINES_LEXICOGRAPHIC_ASCENDING
+					MENUITEM "Descending", IDM_EDIT_SORTLINES_LEXICOGRAPHIC_DESCENDING
+				END
+				POPUP "Integer"
+				BEGIN
+					MENUITEM "Ascending", IDM_EDIT_SORTLINES_INTEGER_ASCENDING
+					MENUITEM "Descending", IDM_EDIT_SORTLINES_INTEGER_DESCENDING
+				END
+				POPUP "Decimal (comma)"
+				BEGIN
+					MENUITEM "Ascending", IDM_EDIT_SORTLINES_DECIMALCOMMA_ASCENDING
+					MENUITEM "Descending", IDM_EDIT_SORTLINES_DECIMALCOMMA_DESCENDING
+				END
+				POPUP "Decimal (dot)"
+				BEGIN
+					MENUITEM "Ascending", IDM_EDIT_SORTLINES_DECIMALDOT_ASCENDING
+					MENUITEM "Descending", IDM_EDIT_SORTLINES_DECIMALDOT_DESCENDING
+				END
+			END
             MENUITEM "Move Up Current Line",      IDM_EDIT_LINE_UP
             MENUITEM "Move Down Current Line",    IDM_EDIT_LINE_DOWN
 			MENUITEM "Remove Empty Lines",        IDM_EDIT_REMOVEEMPTYLINES
