--- a/PowerEditor/src/Notepad_plus.rc
+++ b/PowerEditor/src/Notepad_plus.rc
@@ -832,7 +832,7 @@ BEGIN
 
     POPUP "&?"
     BEGIN
-        MENUITEM "Help Contents",              IDM_HELP
+        //MENUITEM "Help Contents",              IDM_HELP
         MENUITEM "Command Line Arguments...",      IDM_CMDLINEARGUMENTS
         MENUITEM SEPARATOR
         MENUITEM "Notepad++ Home",            IDM_HOMESWEETHOME
@@ -876,7 +876,7 @@ BEGIN
     LTEXT           "Author :",IDC_STATIC,21,45,31,8
     LTEXT           "Notepad++ team",IDC_AUTHOR_NAME,78,45,70,8
     LTEXT           "Home Page :",IDC_STATIC,21,59,47,8
-    LTEXT           "http://notepad-plus-plus.org/",IDC_HOME_ADDR,78,59,126,8
+    LTEXT           "https://notepad-plus-plus.org/",IDC_HOME_ADDR,78,59,126,8
     GROUPBOX        "GNU General Public Licence",IDC_STATIC,19,75,231,131,BS_CENTER
     DEFPUSHBUTTON   "OK",IDOK,106,215,50,14,BS_FLAT,WS_EX_STATICEDGE
     // IDC_LICENCE_EDIT should be the last line, don't know why
