[NEW_FEATURE] Add 2 context menus on status bar
Add language context menu and EOL conversion context menu on status bar.

--- a/.gitignore
+++ b/.gitignore
@@ -104,3 +104,9 @@ $RECYCLE.BIN/
 *.DS_Store
 *.swp
 *.out
+scintilla/.hgeol
+scintilla/.hgtags
+scintilla/cppcheck.suppress
+scintilla/.hg_archival.txt
+scintilla/.hgignore
+scintilla/bin/__init__.py
