--- a/PowerEditor/src/WinControls/Preference/preference.rc
+++ b/PowerEditor/src/WinControls/Preference/preference.rc
@@ -144,12 +144,14 @@ BEGIN
     CONTROL         "Highlight comment/php/asp zone",IDC_CHECK_HIGHLITENONEHTMLZONE,
                     "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,267,136,140,10
     EDITTEXT        IDC_EDIT_SESSIONFILEEXT,381,157,34,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_EDIT_WORKSPACEFILEEXT,381,174,34,14,ES_AUTOHSCROLL
     GROUPBOX        "Document Switcher (Ctrl+TAB)",IDC_DOCUMENTSWITCHER_STATIC,37,4,155,39,BS_CENTER
     GROUPBOX        "Smart Highlighting",IDC_SMARTHILITING_STATIC,37,47,155,39,BS_CENTER
     GROUPBOX        "Clickable Link Settings",IDC_CLICKABLELINK_STATIC,259,4,155,39,BS_CENTER
     GROUPBOX        "File Status Auto-Detection",IDC_FILEAUTODETECTION_STATIC,259,47,155,50,BS_CENTER
     GROUPBOX        "Highlight Matching Tags",IDC_TAGMATCHEDHILITE_STATIC,259,101,155,50,BS_CENTER
     RTEXT           "Session file ext.:",IDC_SESSIONFILEEXT_STATIC,271,160,108,8
+    RTEXT           "Workspace file ext.:",IDC_WORKSPACEFILEEXT_STATIC,271,177,108,8
 END
 
 IDD_PREFERENCE_NEWDOCSETTING_BOX DIALOGEX 0, 0, 455, 185
